<resources>
    <string name="app_name">羊城通</string>
    <string name="enter_main_page">进入首页</string>
    <string name="main_tab_one">首页</string>
    <string name="main_tab_two">推荐</string>
    <string name="main_tab_three">我</string>

    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="exit_remind">再按一次退出</string>

    <string name="text_account">账号</string>
    <string name="text_password">密码</string>
    <string name="hint_account">用户名/手机号/邮箱</string>
    <string name="hint_password">6-16位</string>
    <string name="login">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="logout">退出当前账号</string>
    <string name="register_now">马上注册</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="account_invalid">账号不合法</string>
    <string name="account_not_exist">账号不存在</string>
    <string name="account_can_not_empty">账号不能为空</string>
    <string name="password_format_invalid">密码格式不正确</string>
    <string name="password_bits_limit">密码位数为6-12位</string>
    <string name="password_can_not_empty">密码不能为空</string>
    <string name="please_input_account">请输入账号</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="get_verigycode">获取验证码</string>
    <string name="please_input_verifycode">请输入验证码</string>
    <string name="please_input_verigyemail">请输入验证邮箱</string>

    <string name="please_input_keyword">请输入关键字</string>

    <string name="nick_name">昵称</string>
    <string name="user_name">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="email">邮箱</string>
    <string name="wechat">微信</string>
    <string name="country">国籍</string>
    <string name="sex">性别</string>
    <string name="password">密码</string>
    <string name="age">年龄</string>
    <string name="college">大学</string>
    <string name="major">专业</string>
    <string name="hometown">家乡</string>
    <string name="job">职业</string>
    <string name="range">等级</string>
    <string name="intergral">积分</string>
    <string name="address">地址</string>

    <string name="hotel">旅馆</string>
    <string name="tasty">美食</string>
    <string name="fun">玩乐</string>
    <string name="traffic">交通</string>
    <string name="stratery">攻略</string>
    <string name="map">地图</string>
    <string name="get_partner">结伴</string>
    <string name="get_guide">导游</string>

    <string name="spot_detail">景点详情</string>
    <string name="spot_list">景点</string>
    <string name="hotel_detail">旅馆详情</string>
    <string name="hotel_list">旅馆</string>
    <string name="tasty_detail">美食详情</string>
    <string name="stragery_detail">攻略详情</string>
    <string name="local_guide_detail">向导详情</string>
    <string name="personal_detail">个人详情</string>

    <string name="baidu_map">地图</string>
    <string name="search_result">搜索结果</string>
    <string name="locate_result">定位结果</string>

    <string name="user_stargery">攻略</string>
    <string name="user_discover">发现</string>
    <string name="user_setting">设置</string>
    <string name="user_friend">朋友</string>

    <string name="my_friend">我的朋友</string>
    <string name="my_stargety">我的攻略</string>
    <string name="my_discover">我的发现</string>

    <string name="user_detail_info">用户详情</string>
    <string name="user_personal_info">个人详情</string>
    <string name="edit_user_info">编辑</string>

    <string name="detail_page">详情页</string>

    <string name="general">通用</string>
    <string name="general_setting">通用设置</string>
    <string name="language">语言</string>
    <string name="selected_language_zh">中文</string>
    <string name="selected_language_en">英语</string>
    <string name="language_follow_system">跟随系统</string>
    <string name="font_size">字体大小</string>
    <string name="flow">流量</string>
    <string name="clear_cache">缓存清理</string>

    <string name="privicy_setting">隐私设置</string>
    <string name="privicy">隐私</string>
    <string name="show_personal_info">展示个人信息</string>

    <string name="security_setting">安全设置</string>
    <string name="security">安全</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="change_password">修改密码</string>

    <string name="prefer_setting">偏好设置</string>
    <string name="prefer">偏好</string>
    <string name="prefer_zome">偏好地区</string>
    <string name="prefer_hotel">偏好旅馆</string>
    <string name="prefer_fun">偏好玩乐</string>
    <string name="prefer_tasty">偏好美食</string>
    <string name="prefer_traffic">偏好交通</string>

    <string name="not_limit">不限</string>
    <string name="tianhe">天河区</string>
    <string name="yuexiu">越秀区</string>
    <string name="liwan">荔湾区</string>
    <string name="haizhu">海珠区</string>
    <string name="baiyun">白云区</string>
    <string name="panyu">番禺区</string>
    <string name="conghua">从化区</string>
    <string name="luogang">萝岗区</string>

    <string name="type_economic">经济型</string>
    <string name="type_splendid">豪华型</string>

    <string name="type_historical">历史古迹</string>
    <string name="type_modern">现代化</string>

    <string name="type_walk">步行</string>
    <string name="type_subway">地铁</string>
    <string name="type_bike">骑行</string>
    <string name="type_bus">公交</string>
    <string name="type_drive">自驾</string>

    <string name="type_gz">粤口味</string>
    <string name="type_other">其他</string>

    <string name="about_app">关于应用</string>
    <string name="user_report">用户反馈</string>

    <string name="font_size_not_need_change">字体大小已最佳，无须更改</string>
    <string name="cache_clear_finish">缓存已清理</string>
    <string name="current_flow">当前流量为120M</string>

    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_failed">刷新失败</string>

    <string name="gz_subway">广州地铁线路图</string>
    <string name="recently_not_support_this">暂时不支持</string>

    <string name="please_input_your_suggestion">请输入您的宝贵意见和反馈...</string>
    <string name="submit_success">提交成功，衷心感谢</string>
    <string name="bind_success">绑定成功</string>

    <string name="privicy_right_setting">权限设置</string>
    <string name="is_public">是否公开</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="right_setting_success">权限设置成功</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
