<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lhc.android.gz_guide.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_input_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_account"
            android:textSize="@dimen/login_normal_text_size"/>

        <EditText
            android:id="@+id/et_login_input_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/login_normal_text_size"
            android:hint="@string/hint_account"
            android:singleLine="true"
            android:ellipsize="middle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_input_account"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="@dimen/login_normal_text_size"/>

        <EditText
            android:id="@+id/et_login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/login_normal_text_size"
            android:hint="@string/hint_password"
            android:ellipsize="middle"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/login_large_text_size"
        android:layout_below="@id/ll_input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_large"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_submit_login"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">


    <TextView
        android:id="@+id/tv_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textSize="@dimen/login_large_text_size"
        android:background="@drawable/bg_tv_stroke"
        />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="@dimen/login_large_text_size"
        android:layout_toRightOf="@id/tv_register_now"
        android:layout_alignTop="@id/tv_register_now"
        android:layout_marginLeft="80dp"
        android:background="@drawable/bg_tv_stroke"/>
    </LinearLayout>
</RelativeLayout>
