<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/tv_general_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"
        android:gravity="center_vertical"
        android:text="@string/general"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/tv_privicy_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"
        android:gravity="center_vertical"
        android:text="@string/privicy"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/tv_security_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"
        android:gravity="center_vertical"
        android:text="@string/security"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/tv_about_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"
        android:gravity="center_vertical"
        android:text="@string/about_app"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_divider" />

    <TextView
        android:id="@+id/tv_user_report"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"
        android:gravity="center_vertical"
        android:text="@string/user_report"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_divider" />

</LinearLayout>