<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context="com.lhc.android.gz_guide.activity.ForgetPasswordActivity">

    <LinearLayout
        android:id="@+id/ll_input_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

    <EditText
        android:id="@+id/et_input_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/login_normal_text_size"
        android:hint="@string/please_input_account"/>

    <Button
        android:id="@+id/btn_get_verifycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/get_verigycode"
        android:textColor="@color/white"
        android:background="@color/button_bg_green"
        android:layout_toRightOf="@id/et_input_account"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_input_verifycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_input_account"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/et_input_verifycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/please_input_verifycode"/>

        <Button
            android:id="@+id/btn_submit_verifycode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@color/button_bg_green"/>
    </LinearLayout>
</RelativeLayout>
