<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lhc.android.gz_guide.activity.SecureSettingActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/gray_divider"/>

    <TextView
        android:id="@+id/tv_bind_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/bind_email"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/gray_divider"
       />

    <TextView
        android:id="@+id/tv_bind_phone"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/bind_phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/gray_divider"
        />

    <TextView
        android:id="@+id/tv_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:text="@string/change_password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_divider"/>
</LinearLayout>
