<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lhc.android.gz_guide.activity.MainActivity">

    <RadioGroup
        android:id="@+id/rg_tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_tab_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_tab_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_tab_one"
            android:gravity="center"
            android:button="@null"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/rbtn_tab_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_tab_two"
            android:gravity="center"
            android:button="@null"/>

        <RadioButton
            android:id="@+id/rbtn_tab_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/main_tab_three"
            android:gravity="center"
            android:button="@null"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tabs"
        android:background="@color/gray_divider"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_tabs"></android.support.v4.view.ViewPager>

    <com.lhc.android.gz_guide.view.SearchActionBar
        android:id="@+id/search_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </com.lhc.android.gz_guide.view.SearchActionBar>
</RelativeLayout>
